--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,5 +2,8 @@ body{
     background-color: blanchedalmond;
 }
 h1, h2 {
-    color:brown
+    color: blueviolet;
+    }
+p{
+    color: blueviolet;
 }
