--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,49 +1,76 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Sofia&display=swap');
+
+/* CSS reset*/
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html,
+body{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
 body{
     background-color:pink;
     font-family: 'Bree Serif', serif;
     color:#8FBDD3
 }
+
 #my-anya{
-    width: 500px;
+    width: 50%;
     border-radius: 50%;
 }
 #content{
     text-align:center;
+    height: 100%;
 }
 #my-name {
     font-family: 'Bree Serif', serif;
     color:#3A3845
 }
 #left-side{
-    width: 59%;
-    display:inline-block;
+    position:absolute;
+    top: 16px;
+    left: 16px;
 }
+#left-side > a {
+    margin-right: 16px;
+}
+
 #right-side {
-    width: 40%;
-    display:inline-block;
-    text-align:right;
+    position: absolute;
+    top: 16px;
+    right: 16px;
 }
-a{
+
+a {
     color:#A97155;
     text-decoration: none;
     border-bottom:1px dotted #BE8C63;
-}
-header{
-    margin-top: 20px;
 }
 .nav-link {
     margin-left: 20px;
 }
 
 footer{
-    background: #8FBDD3;
     position: absolute;
-    bottom: 0;
+    bottom: 16px;
     left: 50%;
     transform: translate(-50%);
-    margin-bottom: 16px;
+
 }
 footer a:first-child {
 margin-right: 16px;
+}
+
+#content div{
+    width: 60%;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%)
 }
